--- a/04-card/style.css
+++ b/04-card/style.css
@@ -6,7 +6,7 @@
 :root {
 	--color-primary: #0d4663;
 	--color-secondary: #135492;
-	--color-accent: #ff9a88;
+	--color-accent: #bcd8fd;
 
 	--color-black: #111;
 	--color-white: #f5f5f5;
@@ -18,4 +18,73 @@
 
 body {
 	font-family: var(--font-sans), serif;
+	background-color: var(--color-secondary);
+	
+}
+
+.container{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+}
+
+.box{
+	background-color: var(--color-accent);
+	border: #111 3px solid;
+	border-radius: 10px;
+	width: 300px;
+	display: flex;
+	flex-direction: column;
+	justify-content: auto;
+	align-items: center;
+	margin: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.circlebox{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 3px;
+	margin-bottom: 3px;
+}
+
+.circle {
+  	width: 10px;          
+  	height: 10px; 
+  	border-radius: 50%;    
+	border: #333 1px solid;
+}
+
+img{
+	width: 250px;          
+ 	height: 250px;          
+  	border: 1px solid #333; 
+  	border-radius: 10px;
+	margin-bottom: 3px;
+}
+
+.click{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 50px;
+	margin-top: 5px;
+}
+
+button{
+	background: rgb(62, 62, 204);
+	color: white;
+	padding: 3px;
+	border-radius: 15px;
+	cursor: pointer;
+}
+
+.click a{
+	text-decoration: none;
 }
